k8s/02-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledgerly-backend
  namespace: ledgerly
spec:
  selector:
    app: ledgerly-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledgerly-backend
  namespace: ledgerly
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ledgerly-backend
  template:
    metadata:
      labels:
        app: ledgerly-backend
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: backend
          image: ogccr.azurecr.io/ledgerly-backend:17-973d1cb   # IMPORTANT FIX
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 8
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
