k8s/03-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledgerly-frontend
  namespace: ledgerly
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ledgerly-frontend
  template:
    metadata:
      labels:
        app: ledgerly-frontend
    spec:
      containers:
        - name: frontend
          image: REPLACE_WITH_ACR/ledgerly-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ledgerly-frontend
  namespace: ledgerly
spec:
  selector:
    app: ledgerly-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
